ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "microservice-ingress"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: "www.sourabhdevops.shop"
      http:
        paths:
          - path: /products(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8080
          - path: /orders(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8081
          - path: /mysql(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: mysql-service
                port:
                  number: 3306
